# p1_overview

./: AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.rst  pyproject.toml  tox.ini
.github/: ISSUE_TEMPLATE.md
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
src/p1_overview/: __init__.py  cli.py  dfa.py  dfa_state.py
tests/: __init__.py  test_dfa.py  test_p1_overview.py
