[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "p1_overview"
version = "python 3"
description = "Going over my BSU CS361 project 1"
readme = "README.rst"
authors = [
  {name = "Gerardo Madera", email = "gerardmadera2103@gmail.com"}
]
maintainers = [
  {name = "Gerardo Madera", email = "gerardmadera2103@gmail.com"}
]
classifiers = [

]
license = {text = "MIT license"}
dependencies = [
  "typer"
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/gerardo0303/p1_overview/issues"
changelog = "https://github.com/gerardo0303/p1_overview/blob/master/changelog.md"
homepage = "https://github.com/gerardo0303/p1_overview"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

